etc/iptables/iptables.rules
# Generated by iptables-save v1.6.1 on Fri Jun 16 10:42:39 2017
*nat
:PREROUTING ACCEPT [251:52654]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [14104:1040127]
:POSTROUTING ACCEPT [14120:1040767]
COMMIT
# Completed on Fri Jun 16 10:42:39 2017
# Generated by iptables-save v1.6.1 on Fri Jun 16 10:42:39 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3:296]
:IN_SSH - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j IN_SSH
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m conntrack --ctstate NEW -j TCP
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A OUTPUT -p udp -m udp --dport 68 -j DROP
-A OUTPUT -p tcp -m tcp --dport 3306 -j DROP
-A IN_SSH -m recent --rcheck --seconds 10 --hitcount 3 --rttl --name sshbf --mask 255.255.255.255 --rsource -j DROP
-A IN_SSH -m recent --rcheck --seconds 1800 --hitcount 4 --rttl --name sshbf --mask 255.255.255.255 --rsource -j DROP
-A IN_SSH -m recent --set --name sshbf --mask 255.255.255.255 --rsource -j ACCEPT
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A TCP -p tcp -m tcp --dport 2322 -m conntrack --ctstate NEW -j IN_SSH
-A TCP -p tcp -m tcp --dport 9001 -j ACCEPT
-A TCP -p tcp -m tcp --dport 9030 -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -j ACCEPT
-A TCP -p tcp -m tcp --dport 1194 -j ACCEPT
-A TCP -p tcp -m tcp --dport 3306 -j DROP
-A TCP -p tcp -m tcp --dport 8953 -j REJECT --reject-with icmp-port-unreachable
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A UDP -p udp -m udp --dport 53 -j ACCEPT
-A UDP -p udp -m udp --dport 1194 -j ACCEPT
-A UDP -p udp -m udp --dport 68 -j DROP
COMMIT
# Completed on Fri Jun 16 10:42:39 2017
